# NTEToolbox

./: .prettierrc  README.md  maatools.config.mts  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml
.github/: cliff.toml
.github/ISSUE_TEMPLATE/: bug.zh.yaml  feature.zh.yaml  others.zh.yaml
.github/workflows/: check.yml  install.yml  sync_schema_files.yml
agent/: __init__.py  __main__.py  fish.py  global_val.py  log.py  main.py  piano.py  pienv.py  setting.py  utils.py  virtual_key.py
assets/: interface.json  interface.jsonc
assets/agent/: __main__.py
assets/resource/pipeline/: fish.json  fish.jsonc  main.json  main.jsonc  piano.json  piano.jsonc  utils.jsonc
tools/: configure.py  install.py  validate_schema.py
